--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@tanstack/react-query": "^5.62.2",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "nodemailer": "^6.10.0",
     "react-fast-marquee": "^1.6.5",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "axios": "^1.7.8",
